texture compression missing #37718

Closed
opened 2013-12-06 17:29:08 +01:00 by Daniel Grauer · 29 comments
Member

System Information
Operating system and graphics card
OS: Windows7 64bit
GPU: NVIDIA quadro K4000 (driver: 331.65)

Blender Version
Broken: Blender 2.69 r61235
Worked: dont know

Short description of error
when saving a image directly from a generated texture then the compression is missing and cant be opened in Photoshop

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. go into uv/image editor
  2. create a new image
  3. use "Image>Save as Image" and save it as a .tif
  4. change the source from "single Image" to "Generated"
  5. use "Image>Save Image" (so this overwrites the image again)
  6. check the detail properties of the image on the drive and notice that the compression is missing (see screenshots )

sorry cant add pictures, doesnt seem to work...

**System Information** Operating system and graphics card OS: Windows7 64bit GPU: NVIDIA quadro K4000 (driver: 331.65) **Blender Version** Broken: Blender 2.69 r61235 Worked: dont know **Short description of error** when saving a image directly from a generated texture then the compression is missing and cant be opened in Photoshop **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. go into uv/image editor 2. create a new image 3. use "Image>Save as Image" and save it as a .tif 4. change the source from "single Image" to "Generated" 5. use "Image>Save Image" (so this overwrites the image again) 6. check the detail properties of the image on the drive and notice that the compression is missing (see screenshots ) sorry cant add pictures, doesnt seem to work...
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @DanielGrauer

Added subscriber: @DanielGrauer

Added subscriber: @brecht

Added subscriber: @brecht

The second time it's saved as a PNG image with a TIFF extension, which I guess confuses Photoshop.

Not sure why you can't add pictures, it should just be a matter of drag and drop into the text field. We can't solve that without information on what exactly goes wrong or what the error is, but you can always upload to pasteall.org or a similar website.

The second time it's saved as a PNG image with a TIFF extension, which I guess confuses Photoshop. Not sure why you can't add pictures, it should just be a matter of drag and drop into the text field. We can't solve that without information on what exactly goes wrong or what the error is, but you can always upload to pasteall.org or a similar website.
Author
Member

yeah it seems that whenever the direct save is used the image gets saved with the default settings (png, rgba 8bit)

yeah it seems that whenever the direct save is used the image gets saved with the default settings (png, rgba 8bit)
Sergey Sharybin self-assigned this 2013-12-16 14:53:19 +01:00

This issue was referenced by blender/blender-addons-contrib@04eb24a337

This issue was referenced by blender/blender-addons-contrib@04eb24a33737b9d9e29ec758c3db8fb81d140fc1

This issue was referenced by 04eb24a337

This issue was referenced by 04eb24a33737b9d9e29ec758c3db8fb81d140fc1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 04eb24a337.

Closed by commit 04eb24a337.
Author
Member

i just built the latest version (Hash: 6f4515b) and the issue is not resolved. direct save still saves as default png with the old extension in this case .tif.

i just built the latest version (Hash: 6f4515b) and the issue is not resolved. direct save still saves as default png with the old extension in this case .tif.

With the latest version, when I change to Generated direct save is disabled. Are you testing this with the exact same steps as in the bug report?

With the latest version, when I change to Generated direct save is disabled. Are you testing this with the exact same steps as in the bug report?
Author
Member

well i just saved directly again whithout switching to generate first, but i guess that shouldnt change the format either.

well i just saved directly again whithout switching to generate first, but i guess that shouldnt change the format either.

I can't redo the problem when leaving out step 4, the saved image is a TIFF file here.

I can't redo the problem when leaving out step 4, the saved image is a TIFF file here.
Author
Member

well photoshop gives the same error message as before so i assume its still a png in disguise. and if i change the file name to png it loads without problems.

well photoshop gives the same error message as before so i assume its still a png in disguise. and if i change the file name to png it loads without problems.

Can you please upload .tiff file which photoshop doesn't like?

Can you please upload .tiff file which photoshop doesn't like?
Author
Member

oh and when i want to "save image" with step 4 it seems you just built in a error message so it doesnt work and one is forced to use the "save image as" option instead...

oh and when i want to "save image" with step 4 it seems you just built in a error message so it doesnt work and one is forced to use the "save image as" option instead...
Author
Member

Untitled.tif there you go

![Untitled.tif](https://archive.blender.org/developer/F46499/Untitled.tif) there you go

Yes, you're forced to "Save As" now. Trying to use "Save Image" will do nothing. So it's just likely an old image is hanging around on your HDD?

Yes, you're forced to "Save As" now. Trying to use "Save Image" will do nothing. So it's just likely an old image is hanging around on your HDD?
Author
Member

no its not, thats a new one which i just created in blender, then saved as tiff and then directly used save image again which resulted in this disguised png

no its not, thats a new one which i just created in blender, then saved as tiff and then directly used save image again which resulted in this disguised png

Please give as much detailed steps as possible to reproduce the issue from startup file.

Please give as much detailed steps as possible to reproduce the issue from startup file.
Author
Member
  1. go into uv editor
  2. create a new image undefined
  3. save image as tiff undefined undefined
  4. then save image again with "save image" undefined

and thats all im doing

1. go into uv editor 2. create a new image ![undefined](https://archive.blender.org/developer/F46517/undefined) 3. save image as tiff ![undefined](https://archive.blender.org/developer/F46519/undefined) ![undefined](https://archive.blender.org/developer/F46521/undefined) 4. then save image again with "save image" ![undefined](https://archive.blender.org/developer/F46523/undefined) and thats all im doing

Saving RGB 16bit seems to be crucial to reproduce the issue. At least seems managed to reproduce the issue now with this settings.

Saving RGB 16bit seems to be crucial to reproduce the issue. At least seems managed to reproduce the issue now with this settings.

This issue was referenced by blender/blender-addons-contrib@b0c4133c67

This issue was referenced by blender/blender-addons-contrib@b0c4133c67ce5fca7c3aa5abbd5a745c3d812525

This issue was referenced by b0c4133c67

This issue was referenced by b0c4133c67ce5fca7c3aa5abbd5a745c3d812525

@DanielGrauer, should be now fixed in b0c4133c67. Please give ti a try and lemme know how it goes.

@DanielGrauer, should be now fixed in b0c4133c67. Please give ti a try and lemme know how it goes.
Author
Member

im sorry but i still get the same problem with Hash: 6f4515b

im sorry but i still get the same problem with Hash: 6f4515b

You will for sure have issues with those hash -- it's much older than mine today's commit. You would need to wait tonight's buildbot builds if you don't build blender yourself.

You will for sure have issues with those hash -- it's much older than mine today's commit. You would need to wait tonight's buildbot builds if you don't build blender yourself.
Author
Member

hm strange, seems im not fully understanding how to update git yet, will let you know once i figured it out and can test the latest version

hm strange, seems im not fully understanding how to update git yet, will let you know once i figured it out and can test the latest version
Author
Member

ok i confirm that it is working now, for some reason my build was not updated:/ thanks for fixing this problem

ok i confirm that it is working now, for some reason my build was not updated:/ thanks for fixing this problem
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37718
No description provided.